# test-monoid

./: CHANGELOG.md  README.md  test-monoid.cabal
app/: Bull.hs  First.hs  Main.hs  Optional.hs
