cabal-version:      2.4
name:               test-monoid
version:            0.1.0.0
author:             Vincent
maintainer:         vpark45@gmail.com
extra-source-files: CHANGELOG.md
                    README.md

executable test-monoid
  main-is:          Main.hs
  build-depends:    base ^>=4.12.0.0
                  , QuickCheck
  hs-source-dirs:   app
  default-language: Haskell2010
